# Coryl

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  publish.bat  pyproject.toml  tox.ini
docs/: DOCUMENTATION_MATRIX.md  QA_CHECKLIST.md  RELEASE_DOCS_REPORT.md  RELEASE_QA_REPORT.md  ROADMAP_IMPLEMENTATION.md  api-reference.md  layered-config.md  limitations.md  optional-extras.md
examples/: README.md  _support.py  api_cache.py  cache_diskcache.py  cli_tool_config.py  container_config.py  declarative_manifest.py  desktop_app_assets.py  diagnostics_cli.py  diskcache_optional.py  fsspec_memory.py  installed_app.py  layered_config.py  manifest_startup.py  package_assets.py  simple_local_app.py  typed_config.py
scripts/: benchmark_basic.py
src/coryl/: __init__.py  _fs.py  _io.py  _locks.py  _paths.py  cli.py  exceptions.py  manager.py  resources.py  serialization.py
tests/: test_assets_filesystem.py  test_assets_package.py  test_atomic_writes_filesystem.py  test_backwards_compat_filesystem.py  test_cache_builtin.py  test_cache_diskcache.py  test_cache_diskcache_optional.py  test_cli.py  test_cli_integration.py  test_config_basic.py  test_config_layered.py  test_config_migrations.py  test_config_typed.py  test_config_watch.py  test_core_manager_filesystem.py  test_coryl.py  test_dependency_matrix.py  test_documentation_consistency.py  test_examples.py  test_fsspec_filesystem.py  test_fsspec_optional.py  test_manifest_compatibility.py  test_packaging_optional_dependencies.py  test_readonly_filesystem.py  test_release_readiness.py  test_resource_registration_filesystem.py  test_safe_paths_filesystem.py  test_structured_formats_filesystem.py
tests/fixtures/manifests/: legacy.json  legacy.yaml  v2.json  v2.toml  v2.yaml
tests/fixtures/package_assets_fixture/coryl_asset_fixture_pkg/: __init__.py
tests/fixtures/package_assets_fixture/coryl_asset_fixture_pkg/assets/nested/docs/: readme.txt
tests/fixtures/package_assets_fixture/coryl_asset_fixture_pkg/assets/templates/: email.html
