[project]
name = "coryl"
version = "0.0.1"
dependencies = []
authors = [
    { name = "Cecchelani Diego", email = "ceccdieg@gmail.com" },
]
description = "Safe resource and file management for Python applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["resources", "files", "configuration", "assets", "python"]
urls = { Homepage = "https://www.coryl.net" }
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-data = { coryl = ["py.typed"] }
packages = { find = { where = ["src"], include = ["coryl*"] } }
